--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: #000000;
     color: #fff;
-    font-family: 'Verdana', sans-serif;
+    font-family: 'Verdana', 'Times New Roman';
     margin-top: 25px;
     margin-left: 25px;
     margin-right: 25px;
@@ -44,22 +44,28 @@ h2{
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 3px;
-    border-left: 10px;
+    border-bottom-width: 3px;
+    border-top-width: 0px;
+    border-left-width: 10px;
+    border-right-width: 0px;
 }
 .blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 10px;
-    border-bottom: 3px;
+    border-right-width: 10px;
+    border-left-width: 0px;
+    border-bottom-width: 3px;
+    border-top-width: 0px;
 }
 .yellow{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 3px;
-    border-left: 10px;
+    border-bottom-width: 3px;
+    border-top-width: 0px;
+    border-left-width: 10px;
+    border-right-width: 0px;
 }
 .yellow h2{
     color: #000000;
@@ -69,18 +75,29 @@ h2{
     color: #000000;
 }
 .green{
-    background-color: #00D800;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 10px;
-    border-bottom: 3px;
+    border-right-width: 10px;
+    border-left-width: 0px;
+    border-bottom-width: 3px;
+    border-top-width: 0px;
+}
+footer {
+    background: linear-gradient(90deg, #000000 0%, #0000ff 25%, #0066ff 70%, #000000 100%);
 }
 footer p{
-    background: linear-gradient(90deg, #000000 0%, #0000ff 25%, #0066ff 70%);
     text-align: center;
     font-size: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-right: 10px
+    padding-right: 10px;
+    padding-left: 0px;
 }
+span{
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-shadow: none;
+}
+
 
